# Solar-Curtailment

./: CONTRIBUTING.md  LICENSE.md  README.md  README.md (WIP)  SolA Curtailment Daily Analysis -VWatt Part.ipynb  SolA Curtailment Daily Analysis Checkpoint.ipynb  SolA Curtailment Daily Analysis.ipynb  pyproject.toml
.ipynb_checkpoints/: CODE_OF_CONDUCT-checkpoint.md  README-checkpoint.md  SolA Curtailment Daily Analysis-checkpoint.ipynb
documentations/: .solar curtailment progress journal 2.docx.icloud  .solar curtailment progress journal.docx.icloud  dataset information.docx  functions dependancy list.xlsx  solar curtailment dataset information.docx  solar curtailment documentation.docx  solar curtailment progress journal.docx  ~$lar curtailment progress journal.docx  ~WRL0003.tmp  ~WRL2617.tmp
other/: .CANVAS Final Report_V2.pdf.icloud  .SolA Curtailment Daily Analysis.ipynb.icloud  .sample_data_creation.ipynb.icloud  JUST MESSY STUFF HERE.ipynb  SolA Curtailment Daily Analysis.ipynb  Tripping in Clear Sky Days Analysis.ipynb  local_test.ipynb  polyfit optimization.ipynb
other/.ipynb_checkpoints/: .SolA Curtailment Daily Analysis-checkpoint.ipynb.icloud  .sample_data_creation-checkpoint 2.ipynb.icloud  .sample_data_creation-checkpoint.ipynb.icloud  Tripping for All Days Analysis-checkpoint.ipynb  Tripping in Clear Sky Days Analysis-checkpoint.ipynb  VWatt Optimization-checkpoint.ipynb  local_test-checkpoint.ipynb  testing-checkpoint.ipynb  vvar detection-checkpoint.ipynb
other/Tripping Analysis/: .Clear Sky day Tim vs Naomi.ipynb.icloud  .Tripping Plot for Non Clear Sky Days.ipynb.icloud  Energy Generated Difference Analysis.ipynb  SolA Curtailment Summary_Final.xlsx  SolA Curtailment Summary_Final_tripping.xlsx  SolA Curtailment Summary_Final_trippingalldays.xlsx  SolA Curtailment Summary_Final_trippingalldays_messy.xlsx  Tripping for All Days Analysis.ipynb  tripping_alldays_summary_all.csv  tripping_csd_summary_all.csv
other/Tripping Analysis/.ipynb_checkpoints/: .Clear Sky day Tim vs Naomi-checkpoint.ipynb.icloud  .Tripping Plot for Non Clear Sky Days-checkpoint.ipynb.icloud  .Tripping for All Days Analysis-checkpoint.ipynb.icloud  Energy Generated Difference Analysis-checkpoint.ipynb  (+2 more)
src/: SolA Curtailment Daily Analysis.ipynb  VWatt Optimization.ipynb  energy_generated_comparison.ipynb  functions.py  performance summary.xlsx  polyfit optimization.ipynb  sample_data_creation.ipynb  solarcurtailment.py  util.py
src/.ipynb_checkpoints/: SolA Curtailment Daily Analysis Checkpoint-checkpoint.ipynb  SolA Curtailment Daily Analysis-checkpoint.ipynb  VWatt Optimization-checkpoint.ipynb  energy_generated_comparison-checkpoint.ipynb  polyfit optimization-checkpoint.ipynb  sample_data_creation-checkpoint.ipynb  tripping_optimization-checkpoint.ipynb
src/solar_curtailment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/solarcurtailment/: clear_sky_day.py  curtailment_calculation.py  data_visualization.py  energy_calculation.py  file_processing.py  just_testing.ipynb  local_test.ipynb  other_functions.py  polyfit.py  solarcurtailment.py  tripping_curt.py  vvar detection.ipynb  vvar_curt.py  vwatt_curt.py
src/solarcurtailment.egg-info/: PKG-INFO  SOURCES.txt
src/trialsamhan1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/trialsamhan2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_solarcurtailment.ipynb  test_solarcurtailment.py
test/.ipynb_checkpoints/: test_solarcurtailment-checkpoint.ipynb
(+2 files in other folders)
