[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solarcurtailment"
version = "2.0.0"
description = "Analyze solar curtailment of a certain site in a certain date"
readme = "README.md"
authors = [{ name = "Naomi Stringer, Baran Yildiz, Timothy Klymenko, M. Syahman Samhan", email = "baran.yildiz@unsw.edu.au" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["solar", "curtailment", "tripping", "vvar", "vwatt", "voltage", "power"]
dependencies = []
requires-python = ">=3.7"

[project.urls]
repository    = "https://github.com/UNSW-CEEM/Solar-Curtailment"
documentation = "https://github.com/UNSW-CEEM/Solar-Curtailment/blob/main/README.md"